letPoly/testcases/letPoly/ill-Typed/encodingPair.lam
let pair = lam x . lam y . lam k . k x y in
let fst  = lam p . p (lam x . lam y . x) in
let snd  = lam p . p (lam x . lam y . y) in
let test = fst ((pair (zero)) (zero)) in
let hhh = if test then true else false in
hhh

